--- a/Python_snippets.ipynb
+++ b/Python_snippets.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMQmQ6Dt2G/aK2RV/UlUI1+",
+      "authorship_tag": "ABX9TyNGa2/HSJVqrTikOpY1H+NL",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -59,7 +59,7 @@
         "id": "AdBVqzAoAP08",
         "outputId": "3ffb3983-302f-4928-9e2c-d3aa1bb03258"
       },
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -112,7 +112,7 @@
         "id": "hnyaFnhJChqQ",
         "outputId": "6f8e1425-ac9c-42ad-d878-2a9d84d9988e"
       },
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -151,7 +151,7 @@
         "id": "eg2VFqNTEPft",
         "outputId": "71fd3383-a75c-44e7-de3f-c7dd6924a13b"
       },
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -185,7 +185,7 @@
         "id": "5Xcea7GIExFm",
         "outputId": "dbcb8bb8-e114-42c2-e7c3-9ada68cc2da5"
       },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -240,7 +240,7 @@
         "id": "qrJ9I6k5GG_K",
         "outputId": "7cc2faba-14c5-4328-8c25-cf77079fb648"
       },
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -274,7 +274,7 @@
       "metadata": {
         "id": "KdqfNrcSGrTz"
       },
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -295,7 +295,7 @@
         "id": "0GPUYFr7G2Oh",
         "outputId": "6812bb91-6438-4bcf-8f6d-3db7e8075f4c"
       },
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -345,7 +345,7 @@
         "id": "Ry7A3ZkOIxzW",
         "outputId": "8639a29d-be39-41b6-d4d7-536d44281b6d"
       },
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -382,7 +382,7 @@
         "id": "weGlUud1nNA6",
         "outputId": "41752e24-631c-4c57-a432-a1072091a711"
       },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -420,7 +420,7 @@
         "id": "1a91_KQYn8T1",
         "outputId": "59fb7744-5f5f-47e0-f9a7-af9c3ea89e95"
       },
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -461,7 +461,7 @@
         "id": "tdzZbkWxokwU",
         "outputId": "e5587e47-8977-4547-b0e1-7f67b89bf064"
       },
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -508,7 +508,7 @@
         "id": "lENuj9nbqTei",
         "outputId": "58492db4-1a07-4025-be6f-b2bf0d1e0ada"
       },
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -552,7 +552,7 @@
         "id": "rmPQuZUxr-An",
         "outputId": "51eb6987-ae7d-4381-bff4-b0d3ae22b889"
       },
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -593,7 +593,7 @@
         "id": "Ej2E6pEk7Xo2",
         "outputId": "a550b9c7-9027-4c2e-abac-10b48686cbc9"
       },
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -605,10 +605,312 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "# 12 . Convert from list to the string"
+      ],
+      "metadata": {
+        "id": "b_UkpK5EM-zy"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "my_list = ['a','e','i','o','u']\n",
+        "\n",
+        "print(type(my_list))\n",
+        "\n",
+        "str = ''.join(my_list)\n",
+        "\n",
+        "print(str)\n",
+        "print(type(str))"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "ryhlCyZ29FOk",
+        "outputId": "6e2f7fd1-d3b3-446f-addd-d5360b4c2e07"
+      },
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "<class 'list'>\n",
+            "aeiou\n",
+            "<class 'str'>\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "13 . Permutations from the itertools"
+      ],
+      "metadata": {
+        "id": "eHuwFGCIuya0"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "from itertools import permutations\n",
+        "\n",
+        "#string Permutations\n",
+        "str = \"BCA\"\n",
+        "\n",
+        "for i in permutations(str):\n",
+        "  print(\"\".join(i))\n"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "A1fd3EtZNR8-",
+        "outputId": "63f9f9d7-9481-4dd3-f9f3-86c4ecec021b"
+      },
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "BCA\n",
+            "BAC\n",
+            "CBA\n",
+            "CAB\n",
+            "ABC\n",
+            "ACB\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#permutations of the particular size\n",
+        "from itertools import permutations\n",
+        "\n",
+        "my_list = [1,2,3,4]\n",
+        "\n",
+        "for i in permutations(my_list,3):\n",
+        "  print(i)\n",
+        "\n"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "fxJ8p2tHvF3R",
+        "outputId": "3b5ade46-a53d-4166-c65a-c36fb8b84cd9"
+      },
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "(1, 2, 3)\n",
+            "(1, 2, 4)\n",
+            "(1, 3, 2)\n",
+            "(1, 3, 4)\n",
+            "(1, 4, 2)\n",
+            "(1, 4, 3)\n",
+            "(2, 1, 3)\n",
+            "(2, 1, 4)\n",
+            "(2, 3, 1)\n",
+            "(2, 3, 4)\n",
+            "(2, 4, 1)\n",
+            "(2, 4, 3)\n",
+            "(3, 1, 2)\n",
+            "(3, 1, 4)\n",
+            "(3, 2, 1)\n",
+            "(3, 2, 4)\n",
+            "(3, 4, 1)\n",
+            "(3, 4, 2)\n",
+            "(4, 1, 2)\n",
+            "(4, 1, 3)\n",
+            "(4, 2, 1)\n",
+            "(4, 2, 3)\n",
+            "(4, 3, 1)\n",
+            "(4, 3, 2)\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# 14 . groupby() from the itertools"
+      ],
+      "metadata": {
+        "id": "azb_qWycaVpJ"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "from itertools import groupby\n",
+        "\n",
+        "my_list = [1,1,2,2,2,2,3,4]\n",
+        "\n",
+        "for i , group in groupby(my_list):\n",
+        "  print(i,list(group))"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "RHbfJ2QSv0GL",
+        "outputId": "48bf1e9e-81a9-4057-df40-b0daea8fd235"
+      },
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "1 [1, 1]\n",
+            "2 [2, 2, 2, 2]\n",
+            "3 [3]\n",
+            "4 [4]\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# 15 . program to check whether the given number is perfect number"
+      ],
+      "metadata": {
+        "id": "ehpr8zgqoIbM"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "n = int(input())\n",
+        "\n",
+        "divisor_sum = 0\n",
+        "\n",
+        "for i in range(1,n):\n",
+        "  if n%i==0:\n",
+        "    divisor_sum+=i\n",
+        "if(divisor_sum==n):\n",
+        "  print(\"YEs\")\n",
+        "else:\n",
+        "  print(\"no\")"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "Jj7wa5MUa7DG",
+        "outputId": "07cbe1d4-93e4-47e0-d13f-121119c858b6"
+      },
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "28\n",
+            "YEs\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# 16 . Loop"
+      ],
+      "metadata": {
+        "id": "7MfxQJ2rm0RM"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "a = 5\n",
+        "for i in range(a):\n",
+        "  if i==3:\n",
+        "    continue\n",
+        "  print(a)"
+      ],
+      "metadata": {
+        "id": "ivVehlnRqcA9",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "467d5c10-9d9e-4432-fb7b-582ac76ccbfa"
+      },
+      "execution_count": 1,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "5\n",
+            "5\n",
+            "5\n",
+            "5\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# 17 . Reversing a string without the slicing and the loops"
+      ],
+      "metadata": {
+        "id": "6urE39pIn2Ev"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def rev(str):\n",
+        "  if len(str)==0:\n",
+        "    return str\n",
+        "  return rev(str[1:])+str[0]\n",
+        "rev(\"Apple\")"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 36
+        },
+        "id": "aafXOJzHnCZq",
+        "outputId": "ac2b89e1-2dfd-4af1-f8e4-b4a34a09f58f"
+      },
+      "execution_count": 5,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "'elppA'"
+            ],
+            "application/vnd.google.colaboratory.intrinsic+json": {
+              "type": "string"
+            }
+          },
+          "metadata": {},
+          "execution_count": 5
+        }
+      ]
+    },
+    {
       "cell_type": "code",
       "source": [],
       "metadata": {
-        "id": "ryhlCyZ29FOk"
+        "id": "1ZOHAxlooWf5"
       },
       "execution_count": null,
       "outputs": []
